# dprint-plugin-objects-format

./: Cargo.toml  dprint.json
src/: lib.rs
