[package]
name = "dprint-plugin-objects-format"
version = "0.1.0"
edition = "2021"
homepage = "https://github.com/AkasakiTomohiro/dprint-plugin-objects-format"
keywords = ["formatting", "formatter", "object"]
license = "MIT"
repository = "https://github.com/AkasakiTomohiro/dprint-plugin-objects-format"
description = "Object code formatter."

[lib]
crate-type = ["cdylib"]

[features]
tracing = ["dprint-core/tracing"]

[dependencies]
dprint-core = { version = "0.62.0", features = ["formatting"] }

[dev-dependencies]
debug-here = "0.2"
dprint-development = "0.9.2"
